# Medisync

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  database.py  dependencies.py  main.py  pyproject.toml
backend/agents/core/: llm.py
backend/agents/doctor_assistant/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/patient_chatbot/: __init__.py  chatbot.py
backend/agents/triage/: __init__.py  agent.py  prompts.py  questions.py  summary.py  tools.py
backend/routers/: admin.py  ai.py  patients.py  tickets.py
frontend/: .gitignore  README.md  eslint.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/auth/: dev-account-switcher.tsx  (+2 more)
frontend/hooks/: useCurrentUser.ts
frontend/lib/: api.ts  config.ts  supabase.ts  utils.ts
frontend/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20260227072223_initial.sql  20260227160001_create_enums_and_profiles.sql  20260227160002_create_nurse_teams.sql  20260227160003_create_rooms.sql  20260227160004_create_catalog_medicines.sql  20260227160005_create_doctors_and_nurses.sql  20260227160006_create_tickets.sql  20260227160007_create_prescriptions.sql  20260227160008_create_invoices.sql  20260227160009_create_chat_messages.sql  20260228000001_create_ai_pre_assessments.sql
terraform/: .gitignore  ecr.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+17 files in other folders)
